# diploma

./: .gitignore  CMakeLists.txt  Makefile
include/: animals.hpp  diploma.hpp  diplomadef.hpp.in  eosio.token.hpp  foods.hpp  randomizer.hpp
include/assets/: animal_repository.hpp  asset.hpp  asset_repository.hpp  food_repository.hpp
include/atomicassets/: atomicassets.hpp  atomicdata.hpp  base58.hpp  read.hpp  write.hpp  zigzag.hpp
src/: diploma.cpp
src/assets/: animal_repository.cpp  asset_repository.cpp  food_repository.cpp
src/atomicassets/: atomicassets.cpp  atomicdata.cpp  base58_decode.cpp  base58_encode.cpp  read.cpp  write.cpp  zigzag.cpp
